# ivelum-python

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  .mypy.ini  .pylintrc  .python-version  README.md  Taskfile.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.docker/: Dockerfile
.local/.env/app/: .env-local  .env-local-docker  .env-local-tests
src/proxy_service/: manage.py
src/proxy_service/app/: urls.py  wsgi.py
src/proxy_service/app/settings/: base.py  env.py
src/proxy_service/app/settings/components/: __init__.py  logging.py
src/proxy_service/apps/api/hacker_news/: conftest.py  urls.py  views.py
src/proxy_service/apps/api/hacker_news/tests/: test_proxy.py
src/proxy_service/apps/hacker_news/: __init__.py  client.py  exceptions.py  service.py
src/proxy_service/apps/hacker_news/rules/: common.py  length.py
src/proxy_service/apps/hacker_news/rules/tests/: test_lenght.py
